--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "webpack-cli": "6.0.1",
     "webpack-dev-server": "5.2.1"
   },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ],
   "engines": {
     "node": "20"
   }
